[package]
name = "rust-fight"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql"] }
dotenvy = "0.15"
axum = "0.8.6"
